@@ -27,9 +27,12 @@ objectbase_HEADERS = ActivityControl.h Arguments.h \
 	MessageProbe.h Probe.h ProbeLibrary.h ProbeMap.h Swarm.h \
 	SwarmObject.h VarProbe.h probing.h swarm_rts_routines.h version.h
 
+$(libobjectbase_la_OBJECTS): version.h
+
 version.h: $(top_srcdir)/VERSION
-	echo '#define SWARM_VERSION ' | tr -d '\n' > version.h
-	head -1 $(top_srcdir)/VERSION >> version.h
+	echo '#define SWARM_VERSION "' | tr -d '\n' > version.h
+	head -1 $(top_srcdir)/VERSION | tr -d '\n' >> version.h
+	echo '"' >> version.h
 	tail -1 $(top_srcdir)/VERSION | sed 's/^\([0-9][0-9]*\)\..*/#define SWARM_MAJOR \1/' >> version.h
 	tail -1 $(top_srcdir)/VERSION | sed 's/^[0-9][0-9]*\.\([0-9][0-9]*\)\..*/#define SWARM_MINOR \1/' >> version.h
 	tail -1 $(top_srcdir)/VERSION | sed 's/^[0-9][0-9]*\.[0-9][0-9]*\.\([0-9][0-9]*\)/#define SWARM_SUBMINOR \1/' >> version.h 
