@@ -1,3 +1,8 @@
+1998-06-25  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* Makefile.am (version.h): Quote SWARM_VERSION value.
+	($(libobjectbase_la_OBJECTS)): Depend on version.h.
+
 1998-06-24  Alex Lancaster  <alex@santafe.edu>
 
 	* objectbase.h: (Arguments): Add protocol.  Add documentation
